...

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_setup_basics_email_hint"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
...
                    android:id="@+id/account_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_setup_basics_password_hint"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/next"/>
            </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/account_allow_client_certificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
