<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.fsck.k9.activity.setup.AccountSetupOutgoing">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="6dip"
        android:fadingEdge="none"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/account_setup_margin_between_items_incoming_and_outgoing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/account_setup_outgoing_smtp_server_label"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/account_setup_outgoing_security_label"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="6dp"
                style="@style/InputLabel" />

            <Spinner
                android:id="@+id/account_security_type"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:contentDescription="@string/account_setup_outgoing_security_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/account_setup_margin_between_items_incoming_and_outgoing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/account_setup_outgoing_port_label"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/account_require_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/account_setup_outgoing_require_login_label"
                tools:checked="true" />

            <LinearLayout
                android:id="@+id/account_require_login_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/account_setup_margin_between_items_incoming_and_outgoing">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/account_setup_outgoing_username_label"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:text="@string/account_setup_outgoing_authentication_label"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="6dp"
                    style="@style/InputLabel" />

                <Spinner
                    android:id="@+id/account_auth_type"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:contentDescription="@string/account_setup_outgoing_authentication_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/account_setup_margin_between_items_incoming_and_outgoing"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_setup_outgoing_password_label"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/next"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/account_allow_client_certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:text="@string/account_setup_incoming_client_certificate_label"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/InputLabel"
                    android:layout_marginTop="6dp"/>

                <com.fsck.k9.view.ClientCertificateSpinner
                    android:id="@+id/account_client_certificate_spinner"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_next" />

</LinearLayout>
