<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.fsck.k9.activity.setup.AccountSetupAccountType">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:paddingBottom="10dip"
            android:text="@string/account_setup_account_type_instructions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary" />

        <Button
            android:id="@+id/imap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/button_minWidth"
            android:padding="10dip"
            android:text="@string/account_setup_account_type_imap_action" />

        <Button
            android:id="@+id/pop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="@dimen/button_minWidth"
            android:padding="10dip"
            android:text="@string/account_setup_account_type_pop_action" />

    </LinearLayout>

</LinearLayout>
