...
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="?attr/colorSurfaceContainerLow"
            android:minHeight="50dp">

            <EditText
                android:id="@+id/subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_compose_subject_hint"
                android:inputType="textEmailSubject|textAutoCorrect|textCapSentences"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:singleLine="true"
...
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- We have to use "wrap_content" (not "0dip") for "layout_height", otherwise the
             EditText won't properly grow in height while the user is typing the message -->
        <EditText
            android:id="@+id/message_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/message_compose_content_hint"
            android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
...
