...

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:id="@+id/identity"
            android:singleLine="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:ellipsize="end"
            tools:text="Address"
            style="@style/ComposeEditText"
...
            android:layout_centerVertical="true"
            android:paddingTop="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:id="@+id/to_label"
            android:labelFor="@+id/to"
            android:minWidth="50dp"
            android:text="@string/recipient_to"
            style="@style/ComposeTextLabel" />

        <com.fsck.k9.view.RecipientSelectView
            android:id="@+id/to"
...
