<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_list_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messagelist.MessageListFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/message_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fadingEdge="none"
            android:paddingBottom="@dimen/floatingActionButtonSpacing"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            tools:listitem="@layout/message_list_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/floatingActionButtonMargin"
        android:contentDescription="@string/compose_action"
        app:layout_behavior="com.fsck.k9.ui.fab.HideFabOnScrollBehavior"
        app:srcCompat="@drawable/ic_edit"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
