appId: net.thunderbird.android.debug
---

## Open drawer
- tapOn: "Navigate up"

### Open settings
- tapOn:
    id: "net.thunderbird.android.debug:id/material_drawer_name"
    index: 9

### Open general settings
- tapOn:
    id: "net.thunderbird.android.debug:id/text"
    index: 0
    text: "General settings"

### Open display settings
- tapOn:
    id: "android:id/title"
    index: 0
    text: "Display"
