# use env to provide properties:
# env:
#     NAME: Alice

appId: ${MAESTRO_APP_ID}
---

## Open contact
- tapOn:
    id: "net.thunderbird.android.beta:id/participants_container"

## Delete contact
- tapOn: "More options"
- tapOn:
    id: "android:id/title"
    index: 1
- tapOn:
    id: "android:id/button1"
