appId: com.fsck.k9.debug
---
- launchApp:
    clearState: true

# Welcome
- tapOn:
    id: "com.fsck.k9.debug:id/next"

## Setup new account
- tapOn:
    id: "com.fsck.k9.debug:id/account_email"
- inputText: "demo@k9mail.example"
- tapOn:
    id: "com.fsck.k9.debug:id/next"

## Account name configuration
- tapOn:
    id: "com.fsck.k9.debug:id/account_description"
- inputText: "Demo Account"
- tapOn:
    id: "com.fsck.k9.debug:id/account_name"
- inputText: "Demo User"
- tapOn:
    id: "com.fsck.k9.debug:id/done"

## Grant access to contacts
- tapOn:
    id: "com.android.permissioncontroller:id/permission_allow_button"
