appId: ${MAESTRO_APP_ID}
---

## Compose an email and send it
- runFlow:
    file: ../shared/onboard_with_configured_account.yml
    env:
      EMAIL_ADDRESS: "johntest5890@gmail.com"
      ACCOUNT_NAME: "Demo Account"
      DISPLAY_NAME: "Demo User"
    when:
      visible:
        id: "onboarding_welcome_start_button"

## Start composing
- tapOn:
    id: "net.thunderbird.android.beta:id/floating_action_button"

## Compose email
## To
- tapOn:
    id: "net.thunderbird.android.beta:id/to"
- inputText: "simple_compose@example.com"

## Message
- tapOn:
    id: "net.thunderbird.android.beta:id/message_content"
    point: "56%,33%"
- inputText: "Lorem ipsum dolor sit amet."

## Subject
- tapOn:
    id: "net.thunderbird.android.beta:id/subject"
- inputText: "Simple compose test"

## Assert
- assertVisible:
    id: "net.thunderbird.android.beta:id/subject"
    text: "Simple compose test"
- assertVisible:
    id: "net.thunderbird.android.beta:id/identity"
    text: "johntest5890@gmail.com"
- assertVisible:
    id: "net.thunderbird.android.beta:id/to"
    text: "simple_compose@example.com, "

## Send
- tapOn:
    id: "net.thunderbird.android.beta:id/send"

